--- a/src/assets/styles/AssistantsSpace.css
+++ b/src/assets/styles/AssistantsSpace.css
@@ -14,11 +14,13 @@
     z-index: 10;
     min-height: 100vh;
     height: auto;
-    max-width: 90%;
+    min-width: 40%;
     border-radius: 32px;
     padding: 3rem;
     border: 1px rgb(216, 216, 216) solid;
 }
+
+
 
 .assistants-space-container {
     background-color: #fff;
