--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -10,7 +10,7 @@
   left: 0;
   width: 100%; /* Ensure the header spans the full width of the viewport */
   z-index: 1000; /* Ensure the header stays on top of other elements */
-  height: 80px; /* Define the height of the header */
+  min-height: 80px; 
 }
 
 /* Navigation List */
