fix the margen bug

--- a/src/assets/styles/Footer.css
+++ b/src/assets/styles/Footer.css
@@ -31,11 +31,10 @@
     background: #000;
     height: fit-content;
     padding-top: 1rem;
-    padding-left: 5rem ;
-
-    /* border-top-left-radius: 32px ;
-    border-top-right-radius: 32px ; */
-  }
+    padding-inline-start: 5rem; 
+    padding-inline-end: 1rem;  
+    width: 100%;
+}
   
 .Latest-News{
     margin: 2rem 0;
