--- a/src/assets/styles/Sidebar.css
+++ b/src/assets/styles/Sidebar.css
@@ -1,8 +1,12 @@
+@import 'bootstrap-icons/font/bootstrap-icons.css';
+
+
+
 .sidebar {
     display: flex;
     flex-direction: column;
     width: 310px;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.54) 0%, rgba(255, 255, 255, 0.16) 100%);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.9) 0%, rgba(255, 255, 255, 0.1) 100%);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
     height: 100%;
