--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -4,13 +4,14 @@
   justify-content: flex-end;
   align-items: center;
   background-color: #000000; /* Match the black background */
-  padding: 24px 50px;
+  padding: 24px 0px;
   position: fixed; /* Make the header fixed */
   top: 0; /* Position it at the top */
-  left: 0;
   width: 100%; /* Ensure the header spans the full width of the viewport */
   z-index: 1000; /* Ensure the header stays on top of other elements */
-  min-height: 80px; 
+  min-height: 80px;
+  padding-inline-start: 5rem; 
+  padding-inline-end: 3rem;  
 }
 
 /* Navigation List */
