--- a/src/assets/styles/Sidebar.css
+++ b/src/assets/styles/Sidebar.css
@@ -75,6 +75,7 @@
   ul li a.active {
     background: #ba1654;
     color: #fff;
+    
   }
   
   ul li a div {
@@ -111,6 +112,31 @@
   }
   
   .bi-chevron-down.rotate {
+    transform: rotate(180deg);
+  }
+  
+
+  .rigth-arrow {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+    width: 100%;
+    text-align: center;
+    color: #fff;
+    padding: 15px 0;
+    cursor: pointer;
+    z-index: 1000;
+    flex-shrink: 0;
+    transition: transform 0.4s ease;
+  }
+  
+  .rigth-arrow i {
+    font-size: 1.5rem;
+    transition: transform 0.4s ease;
+  }
+  
+  .rigth-arrow i.rotate-arrow {
     transform: rotate(180deg);
   }
   
